Widget demo UI update 2 (#498)
* Widget demo UI update

* widget UI responsive update

--- a/public/stylesheets/less/widget.less
+++ b/public/stylesheets/less/widget.less
@@ -85,6 +85,7 @@
     left: 8px;
     a{
       padding-right: 62px;
+      color: @font-color;
     }
   }
   .widget-footer-right{
@@ -98,6 +99,7 @@
       background-size: 60px 12.5px;
       background-position: right center;
       background-repeat: no-repeat;
+      color: @font-color;
     }
   }
 
