--- a/public/stylesheets/less/createButton.less
+++ b/public/stylesheets/less/createButton.less
@@ -34,12 +34,12 @@
   }
   .panel-heading {
     a {
-    color: black;
+      color: black;
     }
-  background-color: #f5f5f5;
-  border-color: #ddd;
-  padding: 10px 15px;
-  border-bottom: 1px solid transparent;
+    background-color: #f5f5f5;
+    border-color: #ddd;
+    padding: 10px 15px;
+    border-bottom: 1px solid transparent;
   }
   .panel-default {
     margin-bottom: 18px;
@@ -169,6 +169,9 @@
       a{
         text-decoration: none;
       }
+      .btn-letters{
+        color: white;
+      }
       color: @font-color;
       position: relative;
       vertical-align: middle;
@@ -232,7 +235,8 @@
       }
     }
     .ng-binding-footer{
-      font-size: ~"calc(6px + 0.7vw)";
+      font-size: ~"calc(10px + 0.4vw)";
+      color: @font-color;
     }
     .prev-code{
       padding: 20px;
