--- a/public/stylesheets/less/vxb-widget.less
+++ b/public/stylesheets/less/vxb-widget.less
@@ -487,7 +487,6 @@
       -moz-border-radius-bottomleft:4px;
       border-top-left-radius:4px;
       border-bottom-left-radius:4px;
-      padding: 1.1%;
     }
     a:last-child {
       -webkit-border-top-right-radius:4px;
@@ -513,13 +512,13 @@
   .vw-body .vw-end-call {
     font-size: ~"calc(8.5px + 0.5vw)";
     float:left;
-    width:42%;
+    width:38%;
     height:46px;
     padding-right: 5%;
     color:#ffffff;
     font-weight:700;
     background:#e20a1f;
-    margin-left:45%;
+    margin-left:51%;
     text-align:center;
     vertical-align: middle;
     -webkit-border-radius:4px;
@@ -654,10 +653,11 @@
 }
 .vw-icon.vx-icon-pad {
   width:30px;
-  height:42px;
+  height:40px;
   background-position:-8px -230px;
 }
 .vw-icon.vx-icon-phone {
+  color: white;
   width:30px;
   height:44px;
   background-position:-8px -280px;
