--- a/views/voxbone_widget_div.pug
+++ b/views/voxbone_widget_div.pug
@@ -20,5 +20,6 @@
   data-dial_pad=((the_widget.dial_pad === undefined || the_widget.dial_pad) ? undefined : `${the_widget.dial_pad}`)
   data-show_frame=((the_widget.show_frame === undefined || the_widget.show_frame) ? undefined : `${the_widget.show_frame}`)
   data-show_branding=((the_widget.show_branding === undefined || the_widget.show_branding) ? undefined : `${the_widget.show_branding}`)
+  data-ringback=((the_widget.ringback === undefined ||the_widget.ringback) ? undefined : `${the_widget.ringback}`)
 )
 script(src=`${script}`)
