--- a/views/layout.pug
+++ b/views/layout.pug
@@ -71,3 +71,7 @@ html(lang='en')
                       a.nav-item.nav-link(href='/account/signup') Create Account
 
       block content
+
+      block footer
+        .footer.small-footer
+          p #[a(target="_blank" href="https://www.voxbone.com/acceptable-use-policy") Acceptable Use Policy] | #[a(target="_blank" href="https://www.voxbone.com/privacy-policy") Privacy Policy] | #[a(target="_blank" href="mailto:workshop@voxbone.com?subject=Voxbone Conferencing Offload Feedback") Send Feedback] | #[a(target="_blank" href="https://workshop.voxbone.com") A Workshop Project] | #[a(target="_blank" href="https://www.voxbone.com/" style="border-right: 0px;") Copyright ©2016, VOXBONE SA]
