Changed extra config title (#543)

--- a/views/widget/demo.pug
+++ b/views/widget/demo.pug
@@ -70,8 +70,8 @@ block content
 
                   .panel.panel-default
                     .panel-heading
-                      a.collapsed.title-toggle.collapse-block(data-toggle="collapse", data-target="#extraConfiguration", href="#extraConfiguration") Extra Configuration
-                    .panel-collapse.collapse#extraConfiguration
+                      a.collapsed.title-toggle.collapse-block(data-toggle="collapse", data-target="#styleConfiguration", href="#styleConfiguration") Style Configuration
+                    .panel-collapse.collapse#styleConfiguration
                       .options-wrap.active
                         .form-group
                           div(style="display:inline-block;")
