Addin css style guide (#545)

--- a/public/stylesheets/less/createButton.less
+++ b/public/stylesheets/less/createButton.less
@@ -28,6 +28,9 @@
     border-radius: 4px;
   }
 
+  .style-guide {
+    color: @color-light-blue;
+  }
   .panel-collapse {
     background :white;
     padding: 10px 10px;
