--- a/views/widget/edit.pug
+++ b/views/widget/edit.pug
@@ -93,6 +93,9 @@ block content
                             span.radio-name Show branding
                             span.badge(data-toggle='tooltip' data-placement="right" title="Toggles Voxbone branding from button and popup") ?
 
+                        .form-group
+                          a.style-guide(href='https://developers.voxbone.com/how-to/style-click2vox-widget/' target='_blank') Click here for information about Custom CSS
+
                   .form-header Call Configuration
                   .form-group
                     label.control-label SIP URI
