[#541] Disable Echo and ivrs sip uris edit/delete (#542)
* Disabling edit and delete for special sips

* Re enabling special sip uri check

* Taking default sip uris from utils

* Removed unnecesary brackets

--- a/views/account/widgets.pug
+++ b/views/account/widgets.pug
@@ -63,7 +63,7 @@ block content
                 a(data-toggle="collapse" href=`#${group.uuid}` class=`${(group.widgets.length === 0) ? 'collapsed': ''}`)
                     span #{group._id}
                     i#flip(class=`fa fa-chevron-${(group.widgets.length === 0) ? 'right': 'down'}`)
-                if (group._id !== 'Unassigned')
+                if group._id !== 'Unassigned' && defaultSipUris.indexOf(group._id) < 0
                   .pull-right
                     a(href="#" ng-click=`editSIPURI("${group._id}")`) Edit/
                     a(href="#" ng-click=`openDeleteSIPURIModal("${group._id}")`) Delete
