--- a/public/stylesheets/less_ui/pages/_button-page.less
+++ b/public/stylesheets/less_ui/pages/_button-page.less
@@ -60,5 +60,75 @@
         border-bottom: 2px solid rgba(0, 0, 0, 0.15);
       }
     }
+  }  
+}
+
+.widget-btn-pack {
+  margin-bottom: 10px;
+  background: rgba(0, 0, 0, 0.3);
+
+  .pack-header{
+    position: relative;
+    display: block;
+    padding: 5px 10px;
+    background: rgba(0, 0, 0, 0.3);
+    
+    
+    i {
+      position: absolute;
+      top:50%;
+      right: 0;
+      width: 32px;
+      height: 32px;
+      padding: 0;
+      line-height: 32px;
+      text-align: center;
+      margin-top: -16px;
+    }
+  }
+
+  .toggle-content {
+    padding: 15px;
+    margin: 0;
+    
+    table {
+      width: 100%;
+      
+      th {
+        border-bottom: 2px solid rgba(255, 255, 255, .2);
+        padding: 10px 0;
+      }
+      
+      td {
+        padding: 10px 0;
+        border-bottom: 1px solid rgba(255, 255, 255, .075);
+        
+      }
+      
+      tr:last-child {
+        
+        td {
+          border: none;
+        }
+      }
+      
+      a {
+        display: inline-block;
+        
+        font-size: .9em;
+        margin-left: 5px;
+        padding-left: 5px;
+        border-left: 1px solid rgba(255, 255, 255, .5);
+        
+        &:first-child {
+          border: none
+        }
+        
+        &:hover {
+          text-decoration: underline;
+        }
+        
+      }
+    }
   }
 }
