--- a/public/stylesheets/less_ui/pages/_button-page.less
+++ b/public/stylesheets/less_ui/pages/_button-page.less
@@ -132,3 +132,22 @@
     }
   }
 }
+
+.choose-position {
+  padding: 10px;
+  background: #f5f5f5;
+  border-radius: 6px;
+  
+  p {
+    margin-bottom: 5px;
+    font-size: 13px;
+    font-weight: bold;
+  }
+
+  label {
+    margin-right: 15px;
+    font-size: 13px;
+  }
+}
+
+
