--- a/views/voxbone_secure_widget.pug
+++ b/views/voxbone_secure_widget.pug
@@ -23,5 +23,6 @@
   data-show_branding=`${the_widget.show_branding}`
   data-test_setup="false"
   data-ringback=((the_widget.ringback === undefined ||the_widget.ringback) ? undefined : `${the_widget.ringback}`)
+  data-placement=`${the_widget.placement}`
 )
 script(src=`${script}`)
