--- a/views/voxbone_widget_div.pug
+++ b/views/voxbone_widget_div.pug
@@ -21,5 +21,6 @@
   data-show_frame=((the_widget.show_frame === undefined || the_widget.show_frame) ? undefined : `${the_widget.show_frame}`)
   data-show_branding=((the_widget.show_branding === undefined || the_widget.show_branding) ? undefined : `${the_widget.show_branding}`)
   data-ringback=((the_widget.ringback === undefined ||the_widget.ringback) ? undefined : `${the_widget.ringback}`)
+  data-placement=`${the_widget.placement}`
 )
 script(src=`${script}`)
