--- a/views/voxbone_widget_div.pug
+++ b/views/voxbone_widget_div.pug
@@ -1,3 +1,5 @@
+doctype html
+
 .voxButton(
   data-button_id=((the_widget._id === undefined) ? undefined : `${the_widget._id}`)
   data-text=`${label}`
@@ -23,4 +25,4 @@
   data-ringback=((the_widget.ringback === undefined ||the_widget.ringback) ? undefined : `${the_widget.ringback}`)
   data-placement=`${the_widget.placement}`
 )
-script(src=`${script}`)
+script(async src=`${script}`)
