--- a/views/home.pug
+++ b/views/home.pug
@@ -116,7 +116,7 @@ block content
               button#newsletterSignUp.btn.btn-default(type="submit") Sign up for Newsletter
 
       .footer
-        p #[a(target="blank" href=" https://www.voxbone.com/acceptable-use-policy") Acceptable Use Policy] | #[a(target="blank" href="https://www.voxbone.com/privacy-policy") Privacy Policy] | #[a(href="/known-issues") Known Issues] | #[a(href="/faq") FAQ] | #[a(target="blank" href="mailto:workshop@voxbone.com?subject=Voxbone Widget Generator Feedback") Send Feedback] | #[a(target="blank" href="https://workshop.voxbone.com") A Workshop Project] | #[a(target="blank" href="https://www.voxbone.com/" style="border-right: 0px;") Copyright ©2017, VOXBONE SA]
+        p #[a(target="blank" href=" https://www.voxbone.com/acceptable-use-policy") Acceptable Use Policy] | #[a(target="blank" href="https://www.voxbone.com/privacy-policy") Privacy Policy] | #[a(href="/known-issues") Known Issues] | #[a(href="/faq") FAQ] | #[a(target="blank" href="mailto:workshop@voxbone.com?subject=Voxbone Widget Generator Feedback") Send Feedback] | #[a(target="blank" href="https://status.voxboneworkshop.com/") Status] | #[a(target="blank" href="https://workshop.voxbone.com") A Workshop Project] | #[a(target="blank" href="https://www.voxbone.com/") Copyright ©#{new Date().getFullYear()}, VOXBONE SA]
 
   #newsletterModal.modal.fade(role="dialog")
     .modal-dialog
