--- a/views/layout.pug
+++ b/views/layout.pug
@@ -74,4 +74,4 @@ html(lang='en')
 
       block footer
         .footer.small-footer
-          p #[a(target="blank" href=" https://www.voxbone.com/acceptable-use-policy") Acceptable Use Policy] | #[a(target="blank" href="https://www.voxbone.com/privacy-policy") Privacy Policy] | #[a(href="/known-issues") Known Issues] | #[a(href="/faq") FAQ] | #[a(target="blank" href="mailto:workshop@voxbone.com?subject=Voxbone Widget Generator Feedback") Send Feedback] | #[a(target="blank" href="https://status.voxboneworkshop.com/") Status] | #[a(target="blank" href="https://workshop.voxbone.com") A Workshop Project] | #[a(target="blank" href="https://www.voxbone.com/") Copyright ©#{new Date().getFullYear()}, VOXBONE SA]
+          include footer
