[#566] Make Chrome-HTTP new tab a pop-up window (#569)

--- a/views/widget/widget_html.pug
+++ b/views/widget/widget_html.pug
@@ -1,6 +1,6 @@
 doctype html
 html(lang='en')
   head
-    title Secure Call Button
-  body
+    title Voxbone Secure Call Button
+  body(style='background-color: #781e75;')
      != `${widget_code}`
