custom select drop down style (#593)

--- a/public/stylesheets/less/custom.less
+++ b/public/stylesheets/less/custom.less
@@ -144,6 +144,16 @@ pre {
   height:40px !important;
 }
 
+select.form-control {
+  background-image: url("../images/custom-select-drop.jpg");
+  background-position: right center;
+  background-size: 30px;
+  background-repeat: no-repeat;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
 .social-buttons{
   a{
     margin-right: 5px;
