[#595] Showing pressed key in dialed (#603)

--- a/public/stylesheets/less/vxb-widget.less
+++ b/public/stylesheets/less/vxb-widget.less
@@ -387,13 +387,13 @@
         line-height: 45px !important;
         font-weight: 700 !important;
       }
-      li:hover {
+      li:hover, li.hover {
         background: #f1f1f1 !important;
       }
-      li:active {
+      li:active, li.active{
         background: @active-call-click !important;
         color: #fff !important;
-      }      
+      }
       li.vw-tl {
         -webkit-border-top-left-radius: 6px;
         -moz-border-radius-topleft: 6px;
@@ -694,7 +694,7 @@
       li:active {
         background: @active-call-click;
         color: #fff;
-      }      
+      }
       li.vw-tl {
         -webkit-border-top-left-radius: 6px;
         -moz-border-radius-topleft: 6px;
