updated meta img url (#612)

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,7 +13,7 @@ html(lang='en')
       meta(property='og:description', content='Click2Vox helps you build a click-to-call button that connects any webpage to any of your SIP addresses in seconds. No app or plug-in installs for your customers. No complex gateway installs or phone system configuration for you. Need to pass information from the webpage to your PBX or navigate an IVR? Click2Vox has you covered.')
     meta(property='og:title', content='HD calling to any SIP address straight from any website')
     meta(property='og:url', content='https://click2vox.com/')
-    meta(property='og:image', content='https://voxconf.me/images/the-workshop-bgctc7.jpg')
+    meta(property='og:image', content='https://click2vox.com/images/the-workshop-bgctc7.jpg')
     meta(property='og:site_name', content='Click2Vox.com - A Workshop Project')
     meta(property='og:type', content='website')
     title Click2Vox by Voxbone
