--- a/views/widget/demo.pug
+++ b/views/widget/demo.pug
@@ -37,11 +37,11 @@ block content
         .header
           .container
             .row
-              .col-xs-12
+              .col-xs-12(ng-cloak)
                 h1 Demo WebRTC Click-to-Call Button
                 p #[b Questions?] #[a(href="https://click2vox.com/faq" target="_blank") See our Frequently Asked Questions document.]
 
-                #alert-success.alert.alert-warning.ng-cloak(ng-show="!isWebRTCSupported()") #[i.glyphicon.glyphicon-exclamation-sign] You are using a browser that does not support WebRTC. You can configure and preview your buttons, but you will not be able to place test calls. Please use Chrome or Firefox for maximum functionality.
+                #alert-success.alert.alert-warning.ng-hide(ng-hide="isWebRTCSupported()") #[i.glyphicon.glyphicon-exclamation-sign] You are using a browser that does not support WebRTC. You can configure and preview your buttons, but you will not be able to place test calls. Please use Chrome or Firefox for maximum functionality.
         hr
         .panel-body(ng-class="{newButton: !isWebRTCSupported()}")
           .row
