#[616] Prepare Click2vox for open sourcing it (#626)
* Deleting mocks folder

* Using envs for demo user

* Removing unused less files

* Tidying up less folder

--- a/public/stylesheets/root.less
+++ b/public/stylesheets/root.less
@@ -14,7 +14,7 @@ Plugin Css
 ================================================ */
 /* Bootstrap */
 @import "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css";
-@import "less_ui/plugins/bootstrap-flex.css";
+@import "less/plugins/bootstrap-flex.css";
 
 
 /* ================================================
@@ -22,35 +22,33 @@ Main Css
 ================================================ */
 
 /* Main Css Codes */
-@import "less_ui/main/_fonts";
-@import "less_ui/main/_colors";
-@import "less_ui/main/_base";
-
+@import "less/main/fonts";
+@import "less/main/colors";
+@import "less/main/base";
 
 /* Modules */
-@import "less_ui/modules/_header";
-@import "less_ui/modules/_footer";
-@import "less_ui/modules/_buttons";
-@import "less_ui/modules/_tool-tip";
-@import "less_ui/modules/_custom-modal";
-@import "less_ui/modules/_panel";
-@import "less_ui/modules/_tootlip";
+@import "less/modules/header";
+@import "less/modules/footer";
+@import "less/modules/buttons";
+@import "less/modules/tool-tip";
+@import "less/modules/custom-modal";
+@import "less/modules/panel";
+@import "less/modules/tooltip";
 
 /* App Sections */
-@import "less_ui/pages/_register";
-@import "less_ui/pages/_home";
-@import "less_ui/pages/_sip";
-@import "less_ui/pages/_button-page";
+@import "less/pages/register";
+@import "less/pages/home";
+@import "less/pages/sip";
+@import "less/pages/button-page";
 
 /* Main Css Codes */
-@import "less/mixing";
-@import "less/custom";
-/* @import "less/addSip"; (added to new ui) */
-@import "less/createButton";
-@import "less/buttonList";
+@import "less/main/mixing";
+@import "less/main/custom";
+@import "less/modules/createButton";
+@import "less/modules/buttonList";
 
 /* Widget Style */
-@import "less/widget";
+@import "less/widget/widget";
 
 /* Responsive Style */
-@import "less_ui/modules/_responsive";
+@import "less/modules/responsive";
